--- a/Client/src/app/components/app-nav.component.html
+++ b/Client/src/app/components/app-nav.component.html
@@ -13,11 +13,14 @@
         </ul>        
     </div>
     <ul class="navbar-nav justify-content-end">
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-primary" (click)="loginUser()">Login</button>
+        <li class="nav-item" *ngIf="!!currentUserName">
+            <span class="user-name">{{currentUserName}}</span>
         </li>
         <li class="nav-item ml-2">
-            <button type="button" class="btn btn-outline-primary" (click)="registerUser()">Register</button>
+            <button type="button" class="btn btn-outline-primary" (click)="isLoggedin ? logoutUser() : loginUser()">{{loginButtonText}}</button>
+        </li>
+        <li class="nav-item ml-2">
+            <button type="button" class="btn btn-outline-primary" (click)="registerUser()" [disabled]="isLoggedin">Register</button>
         </li>
     </ul>
 </nav>
