Client is ready (1)

--- a/Client/src/app/components/app-nav.component.html
+++ b/Client/src/app/components/app-nav.component.html
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/about">About</a>
             </li>
+            <li class="nav-item" *ngIf="(isAuthenticated$ | async)">
+                <a class="nav-link" routerLink="/warehouse">Warehouse</a>
+            </li>
         </ul>        
     </div>
     <ul class="navbar-nav justify-content-end">
