--- a/Client/src/app/components/app.component.html
+++ b/Client/src/app/components/app.component.html
@@ -6,3 +6,5 @@
 </div>
 
 <app-footer></app-footer>
+
+<app-spinner [style.visibility]="(showSpinner$ | async) ? 'visible' : 'hidden'"></app-spinner>
